@@ -7,6 +7,13 @@ What's New in Python 3.6.0 release candidate 2
 
 *Release date: XXXX-XX-XX*
 
+Core and Builtins
+-----------------
+
+- Issue #28147: Fix a memory leak in split-table dictionaries: setattr()
+  must not convert combined table into split table. Patch written by INADA
+  Naoki.
+
 Windows
 -------
 
